Fix sidebar layout issue for Element structure

--- a/src/sass/3/openeyes/_icons.scss
+++ b/src/sass/3/openeyes/_icons.scss
@@ -315,6 +315,7 @@
 
 				// if icon is used in these "frame" areas fix to "dark" icon version
 				@if list.index($used-in-frame, $name) {
+					.i-fixed &,
 					.oe-popup &,
 					.oe-patient-popup &,
 					.oe-hotlist-panel & {
