--- a/src/sass/3/openeyes/components/sem/sidebar/edit-elements/element-sidebar/_edit.scss
+++ b/src/sass/3/openeyes/components/sem/sidebar/edit-elements/element-sidebar/_edit.scss
@@ -22,7 +22,8 @@
 		
 		// <li>
 		.element {
-			margin:0 0 0 0;
+			margin:0;
+
 		}
 		
 		// Elements <a>
